refactor(api): ♻️ 重构FrameServiceRole服务层及DTO转换架构
将FrameServiceRole服务层进行全面重构，引入三层架构规范(Controller/Service/Repository)。
新增DTO转换器实现对象映射，统一业务层返回DTO对象而非实体，实现安全高效的数据传输。

主要变更包括：
1. 新增FrameServiceRoleDTO/FrameServiceRoleVO作为数据传输对象
2. 添加MapStruct转换器进行实体与DTO间转换
3. 服务层实现类继承MyBatis-Flex的ServiceImpl
4. 控制器层统一处理异常并返回标准化VO对象
5. 规范化方法命名和参数校验逻辑

此重构提升了代码可维护性和扩展性，为后续功能开发提供了清晰架构基础。

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>